Convert a use of the varargs form over to java.util.stream directly, since it does weird things with differing types